2000-06-15  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/asm.S (grub_halt): Use jmp instead of jc, if INT 15
	AX=5307h fails.
	
2000-06-15  OKUJI Yoshinori  <okuji@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE): Increase the version number.
	I wish that 0.5.96 will not be released actually...
	
	* stage2/builtins.c (halt_func): New function.
	(builtin_halt): New variable.
	(reboot_func): New function.
	(builtin_reboot): New variable.
	(builtin_table): Added pointers to BUILTIN_HALT and
	BUILTIN_REBOOT.
	* stage2/asm.S (grub_halt): New function.
	(grub_reboot): Likewise.
	* stage2/shared.h (grub_halt): Declared.
	(grub_reboot): Likewise.
	* grub/asmstub.c (grub_reboot): New function.
	(grub_halt): Likewise.
	
2000-06-12  Gordon Matzigkeit  <gord@fig.org>

	* stage2/stage2.c (run_menu): Don't display the menu if the
	timeout is zero.  This makes for cleaner use as a noninteractive
	bootloader.

2000-06-11  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi (GNU/Linux): Added a caution about the
	"mem=" option.
	
2000-06-11  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (convert): When $host_os is linux*, use
	the expression 's%\([sh]d[a-z]\)[0-9]*$%\1%' instead of
	's%[0-9]*$%%', to get rid of the partition part. This fixes the
	bug "/dev/fd0" -> "/dev/fd". (But don't you think the naming is
	quite inconsistent with hard disks? Why not /dev/fd[a-z]?)
	Report by Pavel Roskin.
	
2000-06-08  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi (Network): The body is moved to ...
	(General usage of network support): ... this new section.
	(Diskless): New section.
	* docs/user-ref.texi (General commands): Added a description
	about the command "tftpserver".
	
2000-06-08  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/main.c (decode_rfc1533) [GRUB]: Eliminate trailing
	NULs in the NVT string for a configuration file name, if any.
	(decode_rfc1533): Likewise, if Extensions Path is present,
	eliminate the trailing NULs, if any.