@@ -1,3 +1,14 @@
+2000-06-17  OKUJI Yoshinori  <okuji@gnu.org>
+
+	* stage2/compile: Removed.
+	* netboot/compile: Likewise.
+	* compile: New file. Copied from Automake.
+	
+2000-06-16  OKUJI Yoshinori  <okuji@gnu.org>
+
+	* stage2/boot.c (load_image): Don't remove the vga option after
+	parsing it. Suggested by Tim Riker.
+
 2000-06-15  OKUJI Yoshinori  <okuji@gnu.org>
 
 	* stage2/asm.S (grub_halt): Use jmp instead of jc, if INT 15
